# u-os-hub-client-rs

./: .gitignore  .gitlint  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.adoc  Cargo.toml  Jenkinsfile  LICENSE  README.adoc  README.md  build.rs  clippy.toml  deny.toml
.cargo/: audit.toml  config.toml
.devcontainer/: Dockerfile  devcontainer.json  devcontainer.json.license  docker-compose.devcontainer.yaml
.devcontainer/nats/: Dockerfile  nats-server.conf
.github/workflows/: ci.yaml
examples/: consumer.creds  consumer_conf.json  dh_consumer.rs  nats_consumer.rs  provide.rs  provider.creds  provider_conf.json  u-os-hub-example-consumer.rs  u-os-hub-example-provider.rs  uc-hub-dummy-consumer.rs  uc-hub-dummy-provider.rs
examples/scripts/: build_and_deploy_hub_examples_on_device.sh  remove_hub_examples_on_device.sh
examples/systemd/: u-os-hub-example-consumer.service  u-os-hub-example-provider.service
examples/utils/: mod.rs
src/: authenticated_nats_con.rs  dh_types.rs  env_file_parser.rs  lib.rs  mod.rs  oauth2.rs  payload_builders.rs  variable_definition_serde_extension.rs  variable_value_type_serde_extension.rs
src/consumer/: connected_dh_provider.rs  connected_nats_provider.rs  consumer_types.rs  dh_consumer.rs  dh_types.rs  mod.rs  nats_consumer.rs  variable_key.rs
src/nats_subjects/: mod.rs  subjects_test.rs
src/provider/: mod.rs  oauth2.rs  provider_types.rs  test_data.rs
src/provider/provider_builder/: mod.rs  provider_builder_test.rs
src/provider/provider_definition_validator/: mod.rs  provider_definition_validator_test.rs  test_data.rs
src/provider/provider_options/: mod.rs  provider_options_test.rs
src/provider/variable_builder/: mod.rs  variable_builder_test.rs
src/provider/variable_definition_validator/: mod.rs  variable_definition_validator_test.rs
src/provider/worker/: mod.rs
src/subjects/: mod.rs  subjects_test.rs
src/variable/: mod.rs  value.rs
tests/auth_nats_con/: main.rs
tests/consumer/: dh_consumer.rs  dh_provider_con.rs  dummy_provider.rs  incompatible_provider.rs  main.rs
tests/provider_only/: add_variable_test.rs  main.rs  read_variable_test.rs  register_provider_test.rs  remove_variable_test.rs  update_variable_value_test.rs  utils.rs  write_variable_test.rs
tests/utils/: fake_registry.rs  mod.rs
tools/: build-for-target.sh  build_and_deploy_hub_examples.sh  check-merge-request.sh  check_merge_request.sh  check_version.sh  configure-cross-env.sh  gen-copyright-headers.sh  regenerate_fbs.sh  remove_hub_examples.sh  set_version.sh  start-nats-server.sh  start_nats_server.sh
tools/files/: mod.rs
