[package]
name = "u-os-hub-client"
description = "u-OS Data Hub Client"
version = "0.1.0-next"
edition = "2021"
rust-version = "1.75"

[dependencies]
#must force at least this ring version due to cross compile errors for older versions
ring = "0.17.8"

anyhow = "1.0"
async-nats = "0.37"
async-trait = "0.1.80"
base64 = "0.22"
bytes = "1.10"
const_format = "0.2.20"
flatbuffers = { version="23.0", features = ["serde", "serialize"]}
futures = "0.3.28"
futures-util = "0.3"
hyper = "1.6"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false  }
regex = "1.11"
serde = { version = "1.0.184", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.44", features = ["rt-multi-thread"] }
tracing = { version = "0.1.30" }
thiserror = "1.0"
urlencoding = "2.1"
rustc-hash = "2.1"
time = { version = "0.3.38" }
once_cell = "1.19.0"

[dev-dependencies]
serial_test = "3.0"
rstest = "0.21"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
clap = { version = "4.1", features = ["derive"] }

# Additional lints to prevent runtime crashes
# Some of them are relaxed for tests, see clippy.toml and source code allow tags
[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
indexing_slicing = "warn"

[features]
# If enabled, the crate will export the consumer low level API and generated flatbuffer types to the user
# Only needs to be enabled if the user wants to use the low level API
export-low-level-api = []
