# SPDX-FileCopyrightText: 2025 Weidmueller Interface GmbH & Co. KG <oss@weidmueller.com>
#
# SPDX-License-Identifier: MIT

[package]
name = "u-os-hub-client"
license = "MIT"
description = "u-OS Data Hub Client"
repository = "https://github.com/weidmueller/u-os-hub-client-rs"
homepage = "https://github.com/weidmueller/u-os-hub-client-rs"
readme = "README.md"
version = "0.2.3"
edition = "2021"
rust-version = "1.75"

[dependencies]
#must force at least this ring version due to cross compile errors for older versions
ring = { version = "0.17.8", default-features = false }

anyhow = { version = "1.0", default-features = false, features = ["std"] }
async-nats = { version = "0.45", default-features = false, features = ["ring"] }
async-trait = { version = "0.1.80", default-features = false }
base64 = { version = "0.22", default-features = false }
bytes = { version = "1.10", default-features = false }
const_format = { version = "0.2.20", default-features = false }
flatbuffers = { version = "23.0", features = [
    "serde",
    "serialize",
    "std",
], default-features = false }
futures = { version = "0.3.28", default-features = false }
futures-util = { version = "0.3", default-features = false }
hyper = { version = "1.6", default-features = false }
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
regex = { version = "1.11", default-features = false }
serde = { version = "1.0.184", features = ["derive"], default-features = false }
serde_json = { version = "1.0.104", default-features = false }
tokio = { version = "1.44", features = ["rt"], default-features = false }
tracing = { version = "0.1.30", default-features = false }
thiserror = { version = "1.0", default-features = false }
urlencoding = { version = "2.1", default-features = false }
rustc-hash = { version = "2.1", default-features = false, features = ["std"] }
time = { version = "0.3.38", default-features = false }
once_cell = { version = "1.19.0", default-features = false }

[dev-dependencies]
serial_test = "3.0"
rstest = "0.21"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
clap = { version = "4.1", features = ["derive"] }

[build-dependencies]
flatc-rust = "0.2"

# Additional lints to prevent runtime crashes
# Some of them are relaxed for tests, see clippy.toml and source code allow tags
[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
indexing_slicing = "warn"

# For building with reduced binary size
[profile.release-small]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[features]
# If enabled, the crate will export the consumer low level API and generated flatbuffer types to the user
# Only needs to be enabled if the user wants to use the low level API
export-low-level-api = []
